# numerical-methods

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Polynomial.h  README.md  main.cpp  Лаба 1 Минаев.docx
.github/workflows/: ci.yml
include/: Polynomial.h
src/: main.cpp
